--- a/formregistro.html
+++ b/formregistro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Registro</title>
+    <title>COOK&RATE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
@@ -30,6 +30,7 @@
             <div class="form-group">
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" id="email" name="email" required>
+                <p id="emailError" class="error-message" style="color: red; display: none;"></p>
             </div>
             <div class="form-group">
                 <label for="telefono">Teléfono:</label>
@@ -43,10 +44,12 @@
             <div class="form-group">
                 <label for="passwd">Contraseña:</label>
                 <input type="password" id="passwd" name="passwd" required>
+                <p id="passwdError_1" class="error-message" style="color: red; display: none;"></p>
             </div>
             <div class="form-group">
                 <label for="passwd_v">Confirmar Contraseña:</label>
                 <input type="password" id="passwd_v" name="passwd_v" required>
+                <p id="passwdError_2" class="error-message" style="color: red; display: none;"></p>
             </div>
             <div class="form-group">
                 <label for="userType">Tipo de Usuario:</label>
@@ -58,10 +61,7 @@
                     <option value="consumidor">Consumidor General</option>
                 </select>
             </div>
-            
-            <div id="dynamicFields" class="hidden">
-                
-            </div>
+            <div id="dynamicFields" class="hidden"></div>
             <button type="submit">Registrarse</button>
         </form>
     </div>
