Inicio y Registro de Usuarios implementados - 100%

--- a/formregistro.html
+++ b/formregistro.html
@@ -62,7 +62,15 @@
                 </select>
             </div>
             <div id="dynamicFields" class="hidden"></div>
+            <div class="conditions">
+                Al registrarte, aceptas nuestras <a href="#">Condiciones de uso</a> y <a href="#">Política de privacidad</a>.
+            </div>
             <button type="submit">Registrarse</button>
+            <div class="spacing"></div>
+            <div class="conditions">
+                <p style="padding: 0 0 3px 0">o</p>
+               <a href="index.html">Ingresa a tu cuenta</a>
+            </div>
         </form>
     </div>
 
