--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios y Recetas</title>
-    <style>
-        .receta {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin: 10px;
-            padding: 10px;
-        }
-        .imagenes {
-            display: flex;
-            gap: 10px;
-        }
-        .imagenes img {
-            width: 100px;
-            height: auto;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilos/estilosRegistro.css">
+    <title>COOK&RATE</title>
 </head>
 <body>
-    <h1>Lista de Usuarios y Recetas</h1>
-    <div id="usuarios"></div>
-    <button id="btn_1">Todos los usuarios</button>
-    <h1>Formulario de Usuario</h1>
-    <form id="userForm">
-        <label for="fullName">Nombre completo:</label>
-        <input type="text" id="fullName" name="fullName" placeholder="Ingresa tu nombre completo" required><br><br>
+    <h1 class="titulo">COOK&RATE</h1>
+    <div class="video-background">
+        <video autoplay loop muted>
+            <source src="images/chefs.mp4" type="video/mp4">
+            Tu navegador no soporta la etiqueta de video.
+        </video>
+    </div>
 
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required><br><br>
-        <button type="submit">Enviar</button>
-    </form>
-    <div id="user-info"></div>
-<script src="js/nfs.js"></script>
+    <div class="form-container">
+        <h2 style="text-align: center;">Iniciar Sesion</h2>
+        <form id="LoginForm">
+            <div class="form-group">
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+                <p id="emailError" class="error-message" style="color: red; display: none;"></p>
+            </div>
+            <div class="form-group">
+                <label for="pass">Contraseña</label>
+                <input type="password" id="pass" name="pass" required>
+                <p id="passwdError_1" class="error-message" style="color: red; display: none;"></p>
+            </div>
+            <button type="submit">Iniciar Sesion</button>
+            <div class="conditions">
+                ¿No tienes una cuenta? <a href="formregistro.html">Registrate</a>
+            </div>
+        </form>
+    </div>
+    <script src="js/inicioSesion.js"></script>
 </body>
 </html>
