--- a/perfil.html
+++ b/perfil.html
@@ -7,20 +7,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jsonwebtoken@latest/dist/jsonwebtoken.min.js"></script>
-<script src="js/getUser.js" type="module"></script>
+  <script src="js/getUser.js" type="module"></script>
   <title>Perfil</title>
-<link rel="stylesheet" href="estilos/perfilestilos.css">
+  <link rel="stylesheet" href="estilos/perfilestilos.css">
 </head>
 <body>
   <div class="profile-page">
     <div class="cover-photo">
-      <img src="../images/fondo.jpeg" alt="Foto de portada">
+      <img src="images/fondo.jpeg" alt="Foto de portada">
       <div class="profile-photo">
-        <img src="../images/cocinero.png" alt="Foto de perfil">
+        <img src="images/cocinero.png" alt="Foto de perfil">
       </div>
     </div>
-
 
     <div class="profile-details">
       <h2>Chef Siobb</h2>
@@ -28,162 +26,24 @@
       <p>Chef experta en cocina italiana y postres gourmet.</p>
     </div>
 
-
     <div class="tabs">
       <div class="tab active" data-target="publicaciones">Publicaciones</div>
       <div class="tab" data-target="gallery">Galería de fotos</div>
     </div>
+
     <div class="tab-content publicaciones active">
-          <!-- PUBLICACIONES -->
-
-        <div class="publicacion">
-          <div style="display: flex; align-items: center;">
-              <a href="../perfil.html" target="_blank">
-                  <img style="height: 70px; width: 70px;" src="../images/cocinero.png" alt="Publicación Imagen">
-              </a>
-              <div class="text-container">
-                  <div class="main-text">Lasaña a a la Bolognesa</div>
-                  <div class="subtext">Publicación</div>
-              </div>
-          </div>
-  
-
-       
-          <div class="main-text" style="margin-top: 20px; font-size: 16px; color: #333; text-align: justify;">
-              Ingredientes: <br>
-              &nbsp;&nbsp;<i class="fa-solid fa-bowl-food" style="color: #000000;"></i>&nbsp;Porciones: 10 <br><br>
-              &nbsp;&nbsp;3 1/2 libras de carne de res molida <br>
-              &nbsp;&nbsp;2 cucharaditas de ajo en polvo Ajo en polvo <br>
-              &nbsp;&nbsp;2 cucharadas de Caldo de Carne de Res MAGGI® <br>
-              &nbsp;&nbsp;1 cucharada de aceite vegetal <br>
-              &nbsp;&nbsp;1/3 taza de cebolla cortada finamente <br>
-              &nbsp;&nbsp;3 dientes de ajo cortados finamente <br>
-              &nbsp;&nbsp;1/2 taza de apio cortado finamente <br>
-              &nbsp;&nbsp;1 sobre de Salsa De Tomate Bolognesa MAGGI® <br>
-              &nbsp;&nbsp;3/4 taza de agua <br>
-              &nbsp;&nbsp;4 hojas de laurel <br>
-              &nbsp;&nbsp;3/4 libra de pasta para lasaña cocida Pasta de lasaña precocida <br>
-              &nbsp;&nbsp;2 tazas de queso mozzarella rallado <br>
-              &nbsp;&nbsp;Sal y pimienta al gusto <br>
-              &nbsp;&nbsp;1 taza de queso parmesano <br> <br>
-  
-              ¡A cocinar! <br><br>
-              1.En un tazón, colocar la carne, el ajo en polvo, el Caldo de Carne de Res MAGGI® 2, la pimienta molida y marinar por 5 minutos.<br>
-              2.En una cacerola grande, colocar el aceite, la cebolla, el ajo, el apio y sofreír por 2 minutos.<br>
-              3.Añadir la carne y cocinar por 10 minutos revolviendo constantemente.<br>
-              4.Cuando<br> la carne adquiera una tonalidad gris clara, añadir la Salsa de Tomate MAGGI® estilo Boloñesa, el agua, las hojas de laurel, la sal y pimienta y cocinar a fuego medio por 15 minutos.<br>
-              5.Armado de la lasaña: Al momento de montar la lasaña, untar con un poco de aceite un recipiente refractario o la bandeja que utilice. Colocar una pequeña cantidad de salsa, cubrir el fondo de la bandeja con lascas de pasta precocida, verter una cantidad pequeña de carne, añadir el queso mozzarella y una mínima parte de queso parmesano.<br>
-              6.Repetir este procedimiento hasta rellenar el recipiente. Finalmente, colocar una capa de pasta precocida, la salsa que haya quedado y cubrir con los quesos. La lasaña tiene que tener una buena cantidad de líquido para que la pasta se cocine. Si está muy seca, se le puede agregar caldo de pollo.<br>
-              7.Taparla con papel aluminio y llevar al horno a 150°C por 40 minutos.<br>
-              8.Paso adicional: A esta receta le puede agregar aceitunas negras y hojas de albahaca al momento de cocinar la carne.<br> <br>
-          </div>
-  
-          <div class="carousel">
-              <button class="btn left">&lt;</button>
-              <div class="carousel-images">
-                  <img src="../images/lasagna.jpg" alt="Publicidad 1">
-                  <img src="../images/bechamel.webp" alt="Publicidad 2">
-                  <img src="../images/pasta.jpg" alt="Publicidad 3">
-              </div>
-              <button class="btn right">&gt;</button>
-          </div>
-  
-          <!-- Área de comentarios -->
-          <div class="comentarios">
-              <textarea placeholder="Deja tu comentario..."></textarea>
-              <button onclick="addComment()">Comentar</button>
-          </div>
-  
-          <!-- Lista de comentarios -->
-          <div class="comentarios-list" id="comentarios-list">
-          </div>
-      </div>
-
-
-      <!-- OTRA PUBLICACION -->
-
-
-      <div class="publicacion  publicaciones active">
-        <div style="display: flex; align-items: center;">
-            <a href="../perfil.html" target="_blank">
-                <img style="height: 70px; width: 70px;" src="../images/cocinero.png" alt="Publicación Imagen">
-            </a>
-            <div class="text-container">
-                <div class="main-text">Pastel Sencillo de Chocolate</div>
-                <div class="subtext">Publicación</div>
-            </div>
-        </div>
-
-        <div class="main-text" style="margin-top: 20px; font-size: 16px; color: #333; text-align: justify;">
-            Ingredientes: <br>
-            &nbsp;&nbsp;<i class="fa-solid fa-bowl-food" style="color: #000000;"></i>&nbsp;Porciones: 10 <br><br>
-            &nbsp;&nbsp;1 1/2 Barras de Mantequilla a temperatura ambiente (90 g c/u) <br>
-            &nbsp;&nbsp;1 Lata de Leche Condensada LA LECHERA® <br>
-            &nbsp;&nbsp;3 Huevos <br>
-            &nbsp;&nbsp;1 1/2 Tazas de Harina de trigo<br>
-            &nbsp;&nbsp;1 Cucharadita de Polvo para hornear <br>
-            &nbsp;&nbsp;1 1/2 Barras de Chocolate semiamargo fundido (150 g c/u)<br>
-            &nbsp;&nbsp;3 Envases de Media Crema NESTLÉ® (190 g c/u) <br>
-            &nbsp;&nbsp;3 Barras de Chocolate semiamargo en trozos (150 g c/u) <br><br>
-       
-
-            ¡A cocinar! <br><br>
-            Hornea
-            1.Horno precalentado a 180 °C. <br>
-            2.Para el pastel, acrema la mantequilla; agrega la Leche Condensada LA LECHERA®, los huevos, la harina, el polvo para hornear y 1 ½ barras de chocolate fundido. Vierte la preparación en un molde para pastel previamente engrasado y enharinado y llena hasta ¾ partes, hornea a 180 °C por 30 a 40 minutos o hasta que al introducir un palillo salga limpio. Retira del horno y deja enfriar. <br>
-            Bate
-            3.Para el betún, calienta la Media Crema NESTLÉ® y las 3 barras de chocolate picado hasta que se funda; retira del fuego y refrigera 2 horas o hasta que esté firme. Bate el betún en una batidora y reserva. <br>
-            Sirve <br>
-            4.Desmolda el pastel y corta en tres capas. Coloca un poco de betún en la base, una tapa de pastel, betún y la parte restante de pastel; cubre el pastel con el resto del betún, refrigera por 30 minutos y ofrece. <br><br>
-        </div>
-
-        <div class="carousel">
-            <button class="btn left">&lt;</button>
-            <div class="carousel-images">
-                <img src="../images/chocopastel.jpg" alt="Publicidad 1">
-                <img src="../images/pastel.webp" alt="Publicidad 2">
-                <img src="../images/chocolate.jpeg" alt="Publicidad 3">
-            </div>
-            <button class="btn right">&gt;</button>
-        </div>
-
-        <!-- Área de comentarios -->
-        <div class="comentarios">
-            <textarea placeholder="Deja tu comentario..."></textarea>
-            <button onclick="addComment()">Comentar</button>
-        </div>
-
-        <!-- Lista de comentarios -->
-        <div class="comentarios-list" id="comentarios-list">
-        </div>
+      <!-- Aquí se generarán dinámicamente las publicaciones -->
     </div>
-  </div>
-  <div class="tab-content gallery">
-    <div class="photo-grid">
-      <img src="../images/lasagna.jpg" alt="Foto 1">
-      <img src="../images/bechamel.webp" alt="Foto 2">
-      <img src="../images/pasta.jpg" alt="Foto 3">
-      <img src="../images/joqueis.jpeg" alt="Foto 4">
-    </div>
-  </div>
-
-
-
-
-
-</div> <!--  DIV FINAL DE PUBLICACIONES SI AGREGAS OTRA QUE SE ENCUENTRE AQUI  -->
-
-
-
 
     <div class="tab-content gallery">
       <div class="photo-grid">
-        <img src="../images/lasagna.jpg" alt="Foto 1">
-        <img src="../images/bechamel.webp" alt="Foto 2">
-        <img src="../images/pasta.jpg" alt="Foto 3">
-        <img src="../images/joqueis.jpeg" alt="Foto 4">
+        <img src="images/lasagna.jpg" alt="Foto 1">
+        <img src="images/bechamel.webp" alt="Foto 2">
+        <img src="images/pasta.jpg" alt="Foto 3">
+        <img src="images/joqueis.jpeg" alt="Foto 4">
       </div>
-    </div>   
-  </div>
+    </div>
+  </div> 
+  
 </body>
 </html>
