--- a/paginaprin.html
+++ b/paginaprin.html
@@ -64,8 +64,10 @@
                 <div class="chef-text-below">ENRIQUE OLVERA</div>
             </div>
         </div>
-        <!-- PUBLICACION  -->
+        <!-- PUBLICIDAD  -->
         <div class="publicidad-container"></div>
+        <!-- RECETAS -->
+        <div class="tab-content publicaciones active"></div>
         
     </body>
 </html>
