Pagina inicio y perfil - 55%

--- a/perfil.html
+++ b/perfil.html
@@ -16,7 +16,7 @@
      <div class="cover-photo">
        <img src="images/fondo.jpeg" alt="Foto de portada">
        <div class="profile-photo">
-         <img src="images/cocinero.png" alt="Foto de perfil">
+         <img src="" alt="Foto de perfil">
        </div>
      </div>
      
