--- a/paginaprin.html
+++ b/paginaprin.html
@@ -68,6 +68,19 @@
         <div class="publicidad-container"></div>
         <!-- RECETAS -->
         <div class="tab-content publicaciones active"></div>
+
+        <!-- Corazon off -->
+        <i class="fa-regular fa-heart" style="color: #000000;"></i> 
+        <!-- Corazon on -->
+        <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+        <!-- Like off -->
+        <i class="fa-regular fa-thumbs-up" style="color: #000000;"></i>
+        <!-- Like on -->
+        <i class="fa-solid fa-thumbs-up" style="color: #11306f;"></i>
+        <!-- Dislike off -->
+        <i class="fa-regular fa-thumbs-down" style="color: #000000;"></i>
+        <!-- Dislike on -->
+        <i class="fa-solid fa-thumbs-down" style="color: #11306f;"></i>
         
     </body>
 </html>
