--- a/paginaprin.html
+++ b/paginaprin.html
@@ -27,9 +27,9 @@
         <!-- Menu que aparece -->
         <div class="menu-window" id="menuWindow">
             <span class="close-menu" id="closeMenu">&times;</span>
-            <a href="../redes/foro.html">Foros</a>
+            <a href="topRestaurantes.html">The World's 5 Best</a>
             <a href="perfil.html">Mi perfil</a>
-            <a href="paginaprin.php">Página de Inicio</a>
+            <a href="paginaprin.html">Página de Inicio</a>
         </div>
 
         <!-- Contenido -->
