--- a/perfil.html
+++ b/perfil.html
@@ -20,8 +20,8 @@
               <p class="subtitulo" style="padding-right: 80px;">ANYONE CAN COOK</p>
           </div>
           <a class="avatar" href="perfil.html">
-
-              <p id="userName"></p>
+            <img  alt="Avatar" id="userIcon">
+            <p id="userName"></p>
           </a>
       </div>
       <!-- Menu que aparece -->
