Perfil Usuarios 95% y Pagina de Inicio al 95%

--- a/paginaprin.html
+++ b/paginaprin.html
@@ -35,7 +35,7 @@
         <!-- Contenido -->
         <!-- <div class="content"><br></div> -->
         <!-- Ranking de chefs -->
-        <div class="ranking"><p style="margin-top: 200px;">RANKING DE MEJORES CHEFS</p></div>
+        <div class="ranking"><p style="margin-top: 200px;">RANKING DE MEJORES PLATILLOS</p></div>
         <div class="chefs">
             <div class="chef-card">
                 <div class="chef-carousel">
