--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <link rel="stylesheet" href="estilos/estilosRegistro.css">
     <title>COOK&RATE</title>
 </head>
