--- a/paginaprin.html
+++ b/paginaprin.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/principalestilos.css">
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <script src="js/inicio.js" type="module"></script>
 </head>
     <body>
