--- a/paginaprin.html
+++ b/paginaprin.html
@@ -31,6 +31,7 @@
             <a href="topRestaurantes.html">The World's 5 Best</a>
             <a href="perfil.html">Mi perfil</a>
             <a href="paginaprin.html">Página de Inicio</a>
+            <a href="topchefs.html">Top Best Chefs</a>
         </div>
 
         <!-- Contenido -->
