--- a/nutrition.html
+++ b/nutrition.html
@@ -91,7 +91,7 @@
          const idReceta = recetaId; // Cambia por el ID de la receta deseada
         
             try {
-                const response = await fetch(`http://25.61.139.76:3000/ingredient-nutrition?id_receta=${idReceta}`);
+                const response = await fetch(`http://localhost:3000/ingredient-nutrition?id_receta=${idReceta}`);
         
                 if (!response.ok) {
                     throw new Error('Error en la respuesta del servidor');
