Perfil Usuarios 99% y Pagina de Inicio al 98%

--- a/pagina-usuarios.html
+++ b/pagina-usuarios.html
@@ -48,6 +48,11 @@
             <h2 id="user-fullname"></h2>
             <p id="user-type"></p>
             <p id="user-biography"></p>
+            <div class="followers-container">
+                <p id="followers"></p>
+                <p id="follows"></p>
+            </div>
+            <button class="follow">Seguir</button>
         </div>
 
         <button id="follow-btn" style="display: none;">Seguir</button>
