--- a/perfil.html
+++ b/perfil.html
@@ -41,11 +41,14 @@
        </div>
      </div>
      
-     <div class="profile-details">
-       <h2></h2>
-       <p></p>
-       <p></p>
-     </div>
+    <div class="profile-details">
+      <h2></h2>
+      <p class="biografia"></p>
+      <div class="followers-container">
+        <p id="followers"></p>
+        <p id="follows"></p>
+      </div>
+    </div>
      
 
      <div class="profile-edit">
