Modificaciones sio ranking chefs

--- a/topchefs.html
+++ b/topchefs.html
@@ -34,10 +34,10 @@
     </div>
 <br><br><br>
      <!-- Ranking de chefs  -->
-     <div class="ranking"><p style="margin-top: 200px;">RANKING DE MEJORES CHEFS</p></div>
+     <div class="ranking"><p style="margin-top: 200px;">RANKING DE MEJORES CHEFS BY CRITICS</p></div>
     <div class="podium"></div>
     
 
-
+<br><br><br><br>
 </body>
 </html>
