Perfil Usuarios 99% y Pagina de Inicio al 99%

--- a/pagina-usuarios.html
+++ b/pagina-usuarios.html
@@ -52,7 +52,7 @@
                 <p id="followers"></p>
                 <p id="follows"></p>
             </div>
-            <button class="follow">Seguir</button>
+            <button class="follow" id="follow-btn">Follow</button>
         </div>
 
         <button id="follow-btn" style="display: none;">Seguir</button>
