Perfil Usuarios 99% y Pagina de Inicio al 99.9%

--- a/formregistro.html
+++ b/formregistro.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COOK&RATE</title>
+    <title>Cook&Rate</title>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
