--- a/pagina-usuarios.html
+++ b/pagina-usuarios.html
@@ -9,7 +9,8 @@
    <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
    <link rel="icon" type="image/jpeg" href="images/12.jpg">
    <script src="js/pagina-usuarios.js" type="module"></script>
-   <title>User Profile</title>
+   <title>Cook&Rate</title>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
    <link rel="stylesheet" href="estilos/perfilestilos.css">
 </head>
 <body>
