--- a/paginaprin.html
+++ b/paginaprin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/principalestilos.css">
+    <title>Cook&Rate</title>
     <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <script src="js/inicio.js" type="module"></script>
 </head>
@@ -72,17 +72,17 @@
         <div class="tab-content publicaciones active"></div>
 
         <!-- Corazon off -->
-        <i class="fa-regular fa-heart" style="color: #000000;"></i> 
+        <!-- <i class="fa-regular fa-heart" style="color: #000000;"></i>  -->
         <!-- Corazon on -->
-        <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+        <!-- <i class="fa-solid fa-heart" style="color: #ff0000;"></i> -->
         <!-- Like off -->
-        <i class="fa-regular fa-thumbs-up" style="color: #000000;"></i>
+        <!-- <i class="fa-regular fa-thumbs-up" style="color: #000000;"></i> -->
         <!-- Like on -->
-        <i class="fa-solid fa-thumbs-up" style="color: #11306f;"></i>
+        <!-- <i class="fa-solid fa-thumbs-up" style="color: #11306f;"></i> -->
         <!-- Dislike off -->
-        <i class="fa-regular fa-thumbs-down" style="color: #000000;"></i>
+        <!-- <i class="fa-regular fa-thumbs-down" style="color: #000000;"></i> -->
         <!-- Dislike on -->
-        <i class="fa-solid fa-thumbs-down" style="color: #11306f;"></i>
+        <!-- <i class="fa-solid fa-thumbs-down" style="color: #11306f;"></i> -->
         
     </body>
 </html>
