--- a/perfil.html
+++ b/perfil.html
@@ -8,7 +8,8 @@
    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/48174618d9.js" crossorigin="anonymous"></script>
    <script src="js/perfilUser.js" type="module"></script>
-   <title>Perfil</title>
+   <title>Cook&Rate</title>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
    <link rel="stylesheet" href="estilos/perfilestilos.css">
 </head>
 <body>
