--- a/prueba.html
+++ b/prueba.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios y Recetas</title>
+    <title>Cook&Rate</title>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <style>
         .receta {
             border: 1px solid #ddd;
