--- a/topchefs.html
+++ b/topchefs.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Chefs</title>
+    <title>Cook&Rate</title>
+    <link rel="icon" type="image/jpeg" href="images/logo_CookAndRate.jpg">
     <script src="js/topchefs.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/chefs.css">
