--- a/perfil.html
+++ b/perfil.html
@@ -28,9 +28,10 @@
       <!-- Menu que aparece -->
       <div class="menu-window" id="menuWindow">
           <span class="close-menu" id="closeMenu">&times;</span>
+          <a href="topchefs.html">Top Best Chefs</a>
           <a href="topRestaurantes.html">The World's 5 Best</a>
-          <a href="perfil.html">Mi perfil</a>
           <a href="paginaprin.html">Página de Inicio</a>
+          <a href="perfil.html">Mi perfil</a>
       </div>
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
