--- a/paginaprin.html
+++ b/paginaprin.html
@@ -38,7 +38,7 @@
         <!-- Contenido -->
         <!-- <div class="content"><br></div> -->
         <!-- Ranking de chefs -->
-        <div class="ranking"><p style="margin-top: 200px;">RANKING DE MEJORES PLATILLOS</p></div>
+        <div class="ranking"><p style="margin-top: 30px;"></p></div>
         <div class="chefs">
             <div class="chef-card">
                 <div class="chef-carousel">
@@ -67,8 +67,6 @@
                 <div class="chef-text-below">ENRIQUE OLVERA</div>
             </div>
         </div>
-        <!-- PUBLICIDAD  -->
-        <div class="publicidad-container"></div>
         <!-- RECETAS -->
         <div class="tab-content publicaciones active"></div>
 
